lotto step 2 (#4242)
* feat : lotto step 2

* fix : code review 반영

* fix : code review 반영